<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_playlist" translatable="false">Playlist maker</string>
    <string name="title_settings" translatable="false">Настройки</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="search_hint" translatable="false">Что ищем?</string>
    <string name="media" translatable="false">Медиатека</string>
    <string name="engine" translatable="false">Настройки</string>
    <string name="dark_mode" translatable="false">Темная тема</string>
    <string name="share_app" translatable="false">Поделиться приложением</string>
    <string name="write_to_support" translatable="false">Написать в поддержку</string>
    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="email_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text" translatable="false">Привет!\n\n" +
    "Посмотри курс по Android-разработке:\n" +
    "https://practicum.yandex.ru/android-developer/</string>
    <string name="nothing_found_music" translatable="false">Ничего не нашлось</string>
    <string name="network_error_music" translatable="false">Проблемы со связью\n\n
    Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry" translatable="false">Обновить</string>
    <string name="search_history_title" translatable="false">Вы искали</string>
    <string name="search_history_clear_button" translatable="false">Очистить историю</string>
    <string name="track_duration" translatable="false">Длительность</string>
    <string name="track_album" translatable="false">Альбом</string>
    <string name="track_release_date" translatable="false">Год</string>
    <string name="track_genre" translatable="false">Жанр</string>
    <string name="track_country" translatable="false">Страна</string>
</resources>

