<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_main"
    android:padding="20dp">

    <!-- Заголовок -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_playlist"
        android:textColor="?attr/colorOnBackground"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <!-- Контейнер -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="33dp">

        <!-- КНОПКА 1 -->
        <LinearLayout
            style="@style/MainScreenButton"
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_search"/>

            <TextView
                style="@style/MainScreenButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/search"
                android:textColor="@color/black"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <!-- КНОПКА 2 -->
        <LinearLayout
            style="@style/MainScreenButton"
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_media"/>

            <TextView
                style="@style/MainScreenButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/media"
                android:textColor="@color/black"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <!-- КНОПКА 3 -->
        <LinearLayout
            style="@style/MainScreenButton"
            android:id="@+id/engine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_engine"/>

            <TextView
                style="@style/MainScreenButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/engine"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>