<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_search">

    <!-- Заголовок -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="@dimen/back_arrow"
            android:layout_height="@dimen/back_arrow"
            android:src="@drawable/ic_back_arrow_48"
            app:tint="?attr/colorOnBackground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/search"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary" />
    </LinearLayout>

    <!-- Поиск -->
    <FrameLayout
        android:id="@+id/searchContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_search"
            android:paddingStart="12dp"
            android:paddingEnd="36dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_search"
                app:tint="@color/icon_search_field" />

            <EditText
                android:id="@+id/searchInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/search_hint"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="@color/text_field_input"
                android:textColorHint="@color/icon_search_field" />
        </LinearLayout>

        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_clear_40_36"
            android:visibility="gone"
            app:tint="@color/icon_search_field" />
    </FrameLayout>

    <!-- HISTORY  -->
    <LinearLayout
        android:id="@+id/historyBlock"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/searchContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_history_title"
            android:textColor="@color/text_primary"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="12dp"
            android:overScrollMode="always"
            tools:listitem="@layout/item_track" />

        <Button
            android:id="@+id/clearHistoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/search_history_clear_button"
            android:textAllCaps="false"
            android:backgroundTint="?attr/colorOnBackground"
            app:cornerRadius="16dp" />
    </LinearLayout>

    <!-- RESULTS -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTracks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="12dp"
        android:clipToPadding="false"

        app:layout_constraintTop_toBottomOf="@id/historyBlock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_track" />

    <!-- PLACEHOLDER -->
    <LinearLayout
        android:id="@+id/placeholderContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:paddingHorizontal="16dp"

        app:layout_constraintTop_toBottomOf="@id/searchContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/placeholderImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            tools:src="@drawable/ic_search_error" />

        <TextView
            android:id="@+id/placeholderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            tools:text="@string/network_error_music" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:backgroundTint="?attr/colorOnBackground"
            app:cornerRadius="16dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>